--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.4",
+        "gedmo/doctrine-extensions": "2.4.1"
     },
     "autoload": {
         "psr-0": { "Mangati\\BaseBundle": "" }
