--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "require": {
         "php": ">=5.4",
-        "gedmo/doctrine-extensions": "2.4.1"
+        "gedmo/doctrine-extensions": "~2.4"
     },
     "autoload": {
         "psr-0": { "Mangati\\BaseBundle": "" }
